# Engine

./: CMakeLists.txt
src/: main.c  main.h  mesh.c  opengl.c  opengl.h  shader.c  shader.h  window.c  window.h
